# uv-migrator-integration-testing

./: README.md
poetry-with-scripts/: pyproject.toml
poetry/poetry-extras/: pyproject.toml
poetry/poetry-fastapi/: pyproject.toml
poetry/poetry-from-git/: pyproject.toml  requirements.txt
poetry/poetry-indexes/: pyproject.toml
poetry/poetry-v2/: pyproject.toml
poetry/poetry-v2-package/: pyproject.toml
poetry/python/: pyproject.toml
