[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "nextcloud-news-filter"
version = "0.5.2"
description = "None"
authors = ["Christian Kagerer"]
readme = "README.md"
keywords = []

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0"
rich = "^13.9.4"
requests = "^2.32.3"
types-requests = "^2.28.11.15"
beautifulsoup4 = "^4.12.3"
langdetect = "^1.0.9"
spacy = "^3.8.1"
pip = "^24.3.1"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
commitizen = "^4.1.0"
MonkeyType = "^23.0.0"
pre-commit = "^4.0.1"
pyannotate = "^1.2.0"
pytest = "^8.3.4"
ruff = "^0.8.4"

[tool.poetry.scripts]
nextcloud-news-filter = "nextcloud_news_filter.cli:main"

[tool.commitizen]
changelog_incremental = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "0.5.2"
version_files = [
  "pyproject.toml:version",
  "nextcloud_news_filter/cli.py:__version__",
]

[tool.black]
line-length = 200
exclude = "tests/fixtures"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 200

[tool.isort]
profile = "black"

[tool.ruff]
select = ["ALL"]
ignore = ["D203", "D213", "D407"]
line-length = 200

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  # at least this three should be fine in tests:
  "S101", # asserts allowed in tests...
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
