[project]
name = "poetry-from-git"
version = "0.1.0"
description = ""
authors = [
    {name = "Steven Kessler",email = "stvnksslr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic @ git+https://github.com/pydantic/pydantic@main"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
