[project]
name = "poetry-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Steven Kessler",email = "stvnksslr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi (>=0.115.7,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
